fix: Improve alignment for property filter custom controls

--- a/src/property-filter/styles.scss
+++ b/src/property-filter/styles.scss
@@ -12,7 +12,7 @@
 
 .search-field {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   // The xs breakpoint, minus the table tools container padding
   max-width: calc(#{styles.$breakpoint-x-small} - 2 * #{awsui.$space-l});
 }
